2007-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs: When reloading a project, reuse the same
	  icon factory instance, since it may be inherited from another project.
	  Fixes bug #82527.
	* libsteticui/WidgetEditSession.cs: Removed unneeded assignement.
	* libsteticui/CodeGenerator.cs, libsteticui/CodeGeneratorInternalClass.cs,
	  libsteticui/CodeGeneratorPartialClass.cs, libstetic/GeneratorContext.cs:
	  Fix crash when generating the icon factory (the root object was not set
	  in the GeneratorContext).
	* libsteticui/Project.cs: Special handling of IconFactory is not needed.
	* libstetic/editor/ActionToolItem.cs: In CreateControls, fix crash caused by
	  the icon property being set too early, when it might be null.
	* libstetic/editor/ActionToolbar.cs: Added missing null check.

2007-09-03   <> 

	* libstetic/wrapper/objects.xml: FileChooserButton doesn't have a default
	  constructor, it requires the title and the action. Fixes bug #82671.

2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs, libsteticui/Application.cs,
	  libsteticui/ApplicationBackendController.cs: When a library is unloaded
	  notify the application frontend. The frontend can then clear cached data
	  from the library.
	* libstetic/wrapper/objects.xml: Update EventBox category to 'container'.
	* libstetic/ClassDescriptor.cs: When no label is set for a widget, use the
	  class name, without namespace.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Widget.cs: Added missing null check. Don't set the Name
	  property to unselectable widgets.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Button.cs, libstetic/wrapper/ButtonBox.cs: Don't
	  store the IsDialogButton property. The value can be determined on
	  the fly.

2007-07-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Assign the target gtk version to
	  the project being edited.